@@ -144,6 +144,15 @@ with all sufficient information, see the ChangeLog file or Redmine
   * Carriage returns are changed to be trimmed properly if trim_mode is specified
     and used. Duplicated newlines will be removed on Windows. [Bug #5339] [Bug #11464]
 
+* IPAddr
+  * New methods are added:
+    * IPAddr#prefix
+    * IPAddr#loopback?
+    * IPAddr#private? [Feature #11666]
+    * IPAddr#link_local? [Feature #10912]
+  * IPAddr now rejects invalid address mask. [Bug #13399]
+  * IPAddr#ipv4_compat and #ipv4_compat? are deprecated. [#Bug 13769]
+
 * Net::HTTP
   * Add more HTTP status classes
 
